<resources>
    <string name="app_name">BabyMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="baby_alarm">Baby Alarm</string>
    <string name="baby_ip_camera">Baby IP Camera</string>
    <string name="sleep_history">Sleep History</string>
    <string name="motion_picture">Motion Picture</string>
    <string name="phone_number">Phone number</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="sensitivity">Sensitivity Level</string>
    <string name="test_sensitivity">Sensitivity Test</string>
    <string name="start_monitor">Start Monitor</string>
    <string name="not_monitor">Not Monitor</string>
    <string name="monitoring">Monitoring</string>
    <string name="baby_up">Your baby woke up!</string>
    <string name="parent_title">Parent Device</string>
    <string name="search_baby_device">Search Baby Device</string>
    <string name="select_a_device">Select A Device</string>
    <string name="use_as_baby_device">Use As Baby Device</string>
    <string name="use_as_parent_device">Use As Parent Device</string>
</resources>
